--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,25 +5,14 @@ http {
     default_type  application/octet-stream;
 
     server {
-        listen 80;
+        listen 8080;
         server_name localhost;
-        return 301 https://$host$request_uri;
-    }
-
-    server {
-        listen 443 ssl;
-        server_name localhost;
-
-        ssl_certificate     /etc/nginx/ssl/cert.pem;
-        ssl_certificate_key /etc/nginx/ssl/privkey.pem;
-        ssl_protocols       TLSv1.2 TLSv1.3;
-        ssl_ciphers         HIGH:!aNULL:!MD5;
 
         root /usr/share/nginx/html;
         index index.html;
 
         location /api/ {
-            proxy_pass http://backend-prod:3000/api/;
+            proxy_pass https://transcendence-back-923872734712.europe-west6.run.app/api/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -32,7 +21,7 @@ http {
         }
 
         location /ws/ {
-            proxy_pass http://backend-prod:3000/ws/;
+            proxy_pass https://transcendence-back-923872734712.europe-west6.run.app/ws/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
